--- a/Project001/Views/Home/Index.cshtml
+++ b/Project001/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
-﻿@model IEnumerable<Project001.Models.Restaurant>
+﻿@model Project001.ViewModels.HomeIndexViewModel
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
 </head>
 <body>
+    <h1>@Model.CurrentMessage</h1>
     <table>
-        @foreach (var restaurant in Model)
+        @foreach (var restaurant in Model.Restaurants)
         {
         <tr> 
             <td>@restaurant.Id</td>
